style: re-fixing the styling using tweakcn https://tweakcn.com/themes/cmnwhrbbj000304l10gq021hx fix: sidebar padding icon bug when collapsing the sidebar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -111,75 +111,75 @@
 
 :root {
   --background: oklch(1 0 0);
-  --foreground: oklch(0.148 0.004 228.8);
+  --foreground: oklch(0.2676 0.0761 257.3354);
   --card: oklch(1 0 0);
-  --card-foreground: oklch(0.148 0.004 228.8);
+  --card-foreground: oklch(0.2676 0.0761 257.3354);
   --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.148 0.004 228.8);
-  --primary: oklch(0.5 0.134 242.749);
-  --primary-foreground: oklch(0.977 0.013 236.62);
-  --secondary: oklch(0.967 0.001 286.375);
-  --secondary-foreground: oklch(0.21 0.006 285.885);
-  --muted: oklch(0.963 0.002 197.1);
-  --muted-foreground: oklch(0.56 0.021 213.5);
-  --accent: oklch(0.963 0.002 197.1);
-  --accent-foreground: oklch(0.218 0.008 223.9);
-  --destructive: oklch(0.577 0.245 27.325);
-  --destructive-foreground: hsl(0 0% 98%);
-  --border: oklch(0.925 0.005 214.3);
-  --input: oklch(0.925 0.005 214.3);
-  --ring: oklch(0.852 0.199 91.936);
-  --chart-1: oklch(0.905 0.182 98.111);
-  --chart-2: oklch(0.795 0.184 86.047);
-  --chart-3: oklch(0.681 0.162 75.834);
-  --chart-4: oklch(0.554 0.135 66.442);
-  --chart-5: oklch(0.476 0.114 61.907);
+  --popover-foreground: oklch(0.2676 0.0761 257.3354);
+  --primary: oklch(0.5737 0.1946 257.8578);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.7253 0.1452 70.3384);
+  --secondary-foreground: oklch(1 0 0);
+  --muted: oklch(0.9683 0.0069 247.8956);
+  --muted-foreground: oklch(0.3717 0.0392 257.287);
+  --accent: oklch(0.9683 0.0069 247.8956);
+  --accent-foreground: oklch(0.5737 0.1946 257.8578);
+  --destructive: oklch(0.5308 0.2178 29.2339);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.869 0.0198 252.8943);
+  --input: oklch(0.869 0.0198 252.8943);
+  --ring: oklch(0.2676 0.0761 257.3354);
+  --chart-1: oklch(0.5737 0.1946 257.8578);
+  --chart-2: oklch(0.7253 0.1452 70.3384);
+  --chart-3: oklch(0.2676 0.0761 257.3354);
+  --chart-4: oklch(0.6231 0.188 259.8145);
+  --chart-5: oklch(0.7686 0.1647 70.0804);
   --radius: 0.75rem;
-  --sidebar-background: hsl(0 0% 98%);
-  --sidebar-foreground: oklch(0.148 0.004 228.8);
-  --sidebar-primary: oklch(0.588 0.158 241.966);
-  --sidebar-primary-foreground: oklch(0.977 0.013 236.62);
-  --sidebar-accent: oklch(0.963 0.002 197.1);
-  --sidebar-accent-foreground: oklch(0.218 0.008 223.9);
-  --sidebar-border: oklch(0.925 0.005 214.3);
-  --sidebar-ring: oklch(0.723 0.014 214.4);
-  --sidebar: oklch(0.987 0.002 197.1);
+  --sidebar-background: oklch(0.9842 0.0034 247.8575);
+  --sidebar-foreground: oklch(0.2676 0.0761 257.3354);
+  --sidebar-primary: oklch(0.5737 0.1946 257.8578);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.9288 0.0126 255.5078);
+  --sidebar-accent-foreground: oklch(0.5737 0.1946 257.8578);
+  --sidebar-border: oklch(0.869 0.0198 252.8943);
+  --sidebar-ring: oklch(0.5737 0.1946 257.8578);
+  --sidebar: oklch(0.9842 0.0034 247.8575);
 }
 
 .dark {
-  --background: oklch(0.148 0.004 228.8);
-  --foreground: oklch(0.987 0.002 197.1);
-  --card: oklch(0.218 0.008 223.9);
-  --card-foreground: oklch(0.987 0.002 197.1);
-  --popover: oklch(0.218 0.008 223.9);
-  --popover-foreground: oklch(0.987 0.002 197.1);
-  --primary: oklch(0.443 0.11 240.79);
-  --primary-foreground: oklch(0.977 0.013 236.62);
-  --secondary: oklch(0.274 0.006 286.033);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.275 0.011 216.9);
-  --muted-foreground: oklch(0.723 0.014 214.4);
-  --accent: oklch(0.275 0.011 216.9);
-  --accent-foreground: oklch(0.987 0.002 197.1);
-  --destructive: oklch(0.704 0.191 22.216);
-  --destructive-foreground: hsl(0 0% 98%);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.421 0.095 57.708);
-  --chart-1: oklch(0.905 0.182 98.111);
-  --chart-2: oklch(0.795 0.184 86.047);
-  --chart-3: oklch(0.681 0.162 75.834);
-  --chart-4: oklch(0.554 0.135 66.442);
-  --chart-5: oklch(0.476 0.114 61.907);
-  --sidebar-background: hsl(0 0% 7%);
-  --sidebar-foreground: oklch(0.987 0.002 197.1);
-  --sidebar-primary: oklch(0.685 0.169 237.323);
-  --sidebar-primary-foreground: oklch(0.293 0.066 243.157);
-  --sidebar-accent: oklch(0.275 0.011 216.9);
-  --sidebar-accent-foreground: oklch(0.987 0.002 197.1);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.56 0.021 213.5);
-  --sidebar: oklch(0.218 0.008 223.9);
+  --background: oklch(0.1288 0.0406 264.6952);
+  --foreground: oklch(0.9842 0.0034 247.8575);
+  --card: oklch(0.2077 0.0398 265.7549);
+  --card-foreground: oklch(0.9842 0.0034 247.8575);
+  --popover: oklch(0.1288 0.0406 264.6952);
+  --popover-foreground: oklch(0.9842 0.0034 247.8575);
+  --primary: oklch(0.6231 0.188 259.8145);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.7686 0.1647 70.0804);
+  --secondary-foreground: oklch(0.1288 0.0406 264.6952);
+  --muted: oklch(0.2795 0.0368 260.031);
+  --muted-foreground: oklch(0.869 0.0198 252.8943);
+  --accent: oklch(0.2795 0.0368 260.031);
+  --accent-foreground: oklch(0.9842 0.0034 247.8575);
+  --destructive: oklch(0.6368 0.2078 25.3313);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.3717 0.0392 257.287);
+  --input: oklch(0.3717 0.0392 257.287);
+  --ring: oklch(0.6231 0.188 259.8145);
+  --chart-1: oklch(0.6231 0.188 259.8145);
+  --chart-2: oklch(0.7686 0.1647 70.0804);
+  --chart-3: oklch(0.7137 0.1434 254.624);
+  --chart-4: oklch(0.8369 0.1644 84.4286);
+  --chart-5: oklch(0.5461 0.2152 262.8809);
+  --sidebar-background: oklch(0.2077 0.0398 265.7549);
+  --sidebar-foreground: oklch(0.9842 0.0034 247.8575);
+  --sidebar-primary: oklch(0.6231 0.188 259.8145);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.2795 0.0368 260.031);
+  --sidebar-accent-foreground: oklch(0.9842 0.0034 247.8575);
+  --sidebar-border: oklch(0.3717 0.0392 257.287);
+  --sidebar-ring: oklch(0.6231 0.188 259.8145);
+  --sidebar: oklch(0.2077 0.0398 265.7549);
 }
 
 @layer base {
